feat(KSTIP-1750): fix some sonarqube issues