@@ -19,7 +19,6 @@ package ch.dvbern.stip.api.dokument.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import ch.dvbern.stip.api.dokument.entity.CustomDokumentTyp;
 import ch.dvbern.stip.api.dokument.entity.GesuchDokument;
@@ -52,7 +51,7 @@ public class CustomDokumentTypService {
         return getAllCustomDokumentTypsOfTranche(gesuchTrancheId)
             .stream()
             .map(customDocumentTypMapper::toDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
